fix logger, added update
